--- a/src/scss/_rent.scss
+++ b/src/scss/_rent.scss
@@ -1,4 +1,4 @@
-#thumbnail {
+#rent {
     padding-top: 30px;
     padding-bottom: 30px;
     h5 {
@@ -8,7 +8,7 @@
        }
     }
     p{
-
+        font-size: 12pt;
         padding: 20px;
         line-height: 2;
         color:black;
