--- a/src/scss/_achievments.scss
+++ b/src/scss/_achievments.scss
@@ -1,11 +1,21 @@
 #achievments {
     background-image: url(/img/about/testimonial-bg.jpg);
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.65;
     padding: 60px 0;
+
     .count-one {
         text-align: center;
         margin-top: 80px;
         margin-bottom: 80px;
+        img {
+            width:10%;
+        }
         .icon {
             margin-bottom: 20px;
             display: block;
@@ -16,7 +26,7 @@
         }
         .count-value {
             color: $typografyInverseColor;
-            font-size: 48px;
+            font-size: 24px;
             margin-bottom: 20px;
         }
         .width25-divider {
