--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -28,11 +28,12 @@
 			height: 268px;
 			width: 100%;
 			background: transparent;
-			border: 1px solid #ddd;
+
 			padding: 18px 18px;
-			color: $typografyColor;
+			color: black;
 			margin-bottom: 35px;
 			resize: vertical;
+            border: 1px solid $mainborderColor;
 			&:focus {
 				border-color: $mainborderColor;
 			}
@@ -90,7 +91,7 @@
 		background: #f7f7f7;
 		font-weight: 400;
 		letter-spacing: 0px;
-		border: 1px solid #ddd;
+		border: 1px solid $mainborderColor;
 		border-radius: 0;
 		margin-bottom: 30px;
 		padding: 10px 20px;
@@ -109,6 +110,7 @@
 
 	.form-group input {
 		font: normal normal normal 14px/1 FontAwesome, "Rubik", sans-serif;
+
 	}
 
 	.input-group input {
