--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -1,4 +1,5 @@
 .navbar {
+    background: rgba($mainBckgroundInverse,0.7);
     padding: 0;
     .navbar-brand{
         img {
@@ -9,10 +10,6 @@
     .mobile-menu {
         display: none;
     }
-
-
-
-
 
     .navbar-nav {
         .nav-link {
@@ -29,7 +26,9 @@
     .slicknav_menu {
         display: none;
         @media screen and (max-width: 991px){
+            margin-top: 20px;
             display: block;
+            font-size: 20px;
         }
     }
     .slicknav_btn {
@@ -72,6 +71,9 @@
         .navbar-header {
             width: 100%;
         }
+        .mobile-menu{
+            margin-top: 20px;
+        }
         .navbar-brand {
             position: absolute;
             padding: 15px 15px;
@@ -90,6 +92,7 @@
             outline: none;
             background: #f8f9fa;
         }
+
     }
 
 
@@ -102,8 +105,6 @@
                 color:$hoverlinkColor;
             }
         }
-
-        background: $mainBckground;
         z-index: 999999;
         top: 0px !important;
         min-height: 58px;
@@ -114,7 +115,7 @@
         animation-fill-mode: both;
         -webkit-animation-name: fadeInDown;
         animation-name: fadeInDown;
-        background: $mainBckground !important;
+        background: white !important;
     }
 
 }
