--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,17 +1,19 @@
 $linkColor: #000000;
 $inverseLinkColor:#fff;
-$hoverlinkColor:#de8183;
+$hoverlinkColor: #5cb7df;
 
-$typografyColor: #000000;
-$typografySecondColor:#de8183;
+$typografyColor: #595959;
+$typografySecondColor: #79a0e2;
 $typografyInverseColor: #ffffff;
 $typografySecondInverseColor: #c1c1c1;
 
 
-$mainBckground: #ffffff;
-$mainBckgroundInverse: #242424;
-$secondBckground: #de8183;
+$mainBckground: #fff2c7;
+$mainBckgroundTransparent: rgba(255, 242, 199, 0.3);
+$mainBckgroundInverse: #636363;
+$mainBckgroundInverseTranspaent: rgba(99, 99, 99, 0.31);
+$secondBckground: #1616ff;
 
-$mainborderColor:#EB586F;
+$mainborderColor: #6cb1ff;
 $inverseBorderColor:#ffffff;
 
